Update README to enhance project documentation with detailed features, authentication, and error handling sections

--- a/ReadMe
+++ b/ReadMe
@@ -1,15 +1,22 @@
 ## Task Manager FastAPI Project
 
-This project is a FastAPI application for managing a task list with full CRUD (Create, Read, Update, Delete) functionality.
+This project is a FastAPI application for managing a personal task list with full CRUD (Create, Read, Update, Delete) functionality, user authentication, and robust validation.
+
+---
 
 ### Features
 
-- FastAPI routing for RESTful endpoints
-- Pydantic v2 models for request/response validation
-- SQLAlchemy ORM for database models and queries
-- Alembic for database migrations
-- PostgreSQL database (Docker/local)
-- Pytest + FastAPI TestClient for testing
+- **User Authentication:** JWT-based login and registration
+- **Authorization:** All `/tasks` endpoints are protected; users can only access their own tasks
+- **User Association:** Each task is linked to its creator (user_id foreign key)
+- **Pydantic v2 Models:** For request/response validation (email, password, task fields)
+- **SQLAlchemy ORM:** For database models and queries
+- **Alembic:** For database migrations
+- **PostgreSQL:** Database (Docker/local)
+- **Testing:** Pytest + FastAPI TestClient, with isolated test database and fixtures
+- **Error Handling:** Friendly error messages and validation for all endpoints
+
+---
 
 ### Requirements
 
@@ -17,23 +24,55 @@ This project is a FastAPI application for managing a task list with full CRUD (C
 - Docker (recommended for PostgreSQL)
 - PostgreSQL
 
+---
+
+### Authentication & Authorization
+
+- **Register:** `POST /users/register`  
+  Create a new user (email, password, first/last name)
+- **Login:** `POST /users/login`  
+  Authenticate and receive a JWT token
+- **JWT Protection:** All `/tasks` endpoints require a valid JWT in the `Authorization` header
+- **User Ownership:** Users can only access and modify their own tasks
+
+---
+
 ### Endpoints
 
-- `GET /tasks` - List all tasks
-- `GET /tasks/{id}` - Get a single task
-- `POST /tasks` - Create a new task
-- `PUT /tasks/{id}` - Update a task
-- `DELETE /tasks/{id}` - Delete a task
+| Endpoint        | Method | Description                             |
+| --------------- | ------ | --------------------------------------- |
+| /users/register | POST   | Register a new user                     |
+| /users/login    | POST   | Login and receive JWT token             |
+| /tasks          | GET    | List all tasks for current user         |
+| /tasks/{id}     | GET    | Get a single task (must belong to user) |
+| /tasks          | POST   | Create a new task for current user      |
+| /tasks/{id}     | PUT    | Update a task (must belong to user)     |
+| /tasks/{id}     | DELETE | Delete a task (must belong to user)     |
+
+---
 
 ### Task Model
 
 Each task has:
 
-- Title (string, required)
+- Title (string, required, max length enforced)
 - Description (string, optional)
 - Status (enum: pending, in_progress, completed, cancelled)
 - created_at (timestamp, set automatically)
 - updated_at (timestamp, set automatically)
+- user_id (UUID, foreign key to users table)
+
+---
+
+### Input Validation & Error Handling
+
+- **Email format:** Validated on registration
+- **Password:** Minimum length enforced
+- **Task title:** Required, max length enforced
+- **Error responses:** 422 for validation errors, 401 for unauthorized, 409 for duplicates, etc.
+- **Database errors:** Handled with friendly messages (e.g., user already exists)
+
+---
 
 ### Timestamp Handling (Best Practice)
 
@@ -43,29 +82,35 @@ Each task has:
 - No server-side defaults are used in the model. This is best for FastAPI + SQLAlchemy apps.
 - Pydantic schemas use `datetime` type for these fields, so FastAPI serializes them as ISO strings in responses.
 
+---
+
 ### Migrations
 
 - Use Alembic to manage schema changes.
 - Only create a new migration if you change the database schema (add/remove columns, change types, etc.).
 - Python-side defaults do not require a migration.
 
+---
+
 ### Running the Project
 
 1. Clone the repo and install dependencies (`pip install -r requirements.txt`)
-2. Set up your `.env` file with database credentials
+2. Set up your `.env` file with database credentials and a secure `SECRET_KEY`
 3. Run PostgreSQL (locally or with Docker)
 4. Run Alembic migrations: `alembic upgrade head`
 5. Start the app: `uvicorn app.main:app --reload`
 
+---
+
 ### Testing
 
 - Run tests with: `pytest`
+- Tests cover registration, login, JWT protection, and all task operations
+
+---
 
 ### Notes
 
 - For most use cases, you do not need server-side defaults or triggers for timestamps.
 - If you need database-level timestamp handling (for direct SQL), add server defaults or triggers and create a migration.
-
----
-
-This project follows modern best practices for FastAPI, SQLAlchemy, and Pydantic v2.
+- The project follows modern best practices for FastAPI, SQLAlchemy, and Pydantic v2.
